fix: fix overflow 2

--- a/pages/main/styles/_variables.scss
+++ b/pages/main/styles/_variables.scss
@@ -11,5 +11,5 @@ $color-dark-2xl: #444444;
 $color-dark-xl: #4c4c4c;
 $color-light-xl:#ffffff;
 $color-primary-light:#FDDCC4;
-$breakpoint-tablet:769px + 34px;
+$breakpoint-tablet:769px + 334px;
 $breakpoint-mobile:320px;
