--- a/pages/main/styles/page_sections/_about-the-shelter.scss
+++ b/pages/main/styles/page_sections/_about-the-shelter.scss
@@ -7,9 +7,6 @@
     flex-direction: row;
     align-items: center;
     background: #ffffff;
-
-    margin: auto;
-
     @media (max-width: $breakpoint-tablet) {
         flex-direction: column-reverse;
         padding-top: 80px;
