--- a/pages/main/styles/page_sections/_pets.scss
+++ b/pages/main/styles/page_sections/_pets.scss
@@ -9,9 +9,6 @@
     display: flex;
     flex-direction: column;
     gap: 60px;
-
-    margin: auto;
-
     h3 {
         text-align: center;
     }
